Removed scrollbar-x in hamburger nav animation, small fixes

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -26,7 +26,11 @@
         margin-bottom: 5px;
       }
     }
+    @include breakpoint-up(medium) {
+      display: none;
+    }
     &.--active {
+      display: flex;
       :nth-child(1) {
         transform: rotateZ(45deg);
       }
@@ -37,9 +41,6 @@
       :nth-child(3) {
         transform: rotateZ(-45deg);
       }
-    }
-    @include breakpoint-up(medium) {
-      display: none;
     }
   }
 
@@ -52,27 +53,25 @@
 
   &__nav {
     display: flex;
-    @include breakpoint-down(small) {
-      &.--hamburger {
-        position: absolute;
-        background-color: $white;
-        top: 0;
-        right: -100%;
-        bottom: 0;
-        z-index: 10;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 25px;
-        padding-top: 75px;
-        min-width: 40vw;
-        width: 100vw;
-        animation: slide 0.3s ease-in-out forwards;
-        a {
-          display: block;
-          &:not(:last-child) {
-            margin-bottom: 25px;
-          }
+    &.active {
+      position: fixed;
+      background-color: $white;
+      top: 0;
+      right: -100%;
+      bottom: 0;
+      z-index: 10;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 25px;
+      padding-top: 75px;
+      min-width: 40vw;
+      width: 100vw;
+      animation: slide 0.3s ease-in-out forwards;
+      a {
+        display: block;
+        &:not(:last-child) {
+          margin-bottom: 25px;
         }
       }
     }
